k8s/base/basedatos.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-db
  labels:
    app: postgres
spec:
  containers:
  - name: postgres
    image: postgres
    resources:
      limits:
        memory: 1Gi
        cpu: 512m
    ports:
    - containerPort: 5432
    volumeMounts:
    - mountPath: /var/lib/postgresql/data
      name: postgredb
  volumes:
  - name: postgredb
    persistentVolumeClaim:
      claimName: basedatos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: LoadBalancer
