k8s/base/compras.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compras-dpl
  labels:
    app: compras
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compras
  template:
    metadata:
      labels:
        app: compras
    spec:
      containers:
      - name: compras
        image: uhilari/compras:0.0.7
        resources:
          limits:
            memory: "128M"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: compras-svc
spec:
  selector:
    app: compras
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: compras-lb
# spec:
#   selector:
#     app: compras
#   ports:
#   - protocol: TCP
#     port: 8580
#     targetPort: 80
#   type: LoadBalancer
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: compras-ing
#   labels:
#     name: compras
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: compras.dev
#     http:
#       paths:
#       - pathType: Prefix
#         path: /api(/|$)(.*)
#         backend:
#           service:
#             name: compras-svc
#             port: 
#               number: 80
